--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
-	<script src="js/html5shiv.js"></script>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
     <!--[if IE 9 ]><script src="js/ie-matchmedia.js"></script><![endif]-->
 </head>
 
@@ -54,7 +54,7 @@
                         <li><a href="#feature">Feature</a></li>
                     </ul>
                     <div class="nav-other">
-                        <a href="#" class="btn btn-default btn-sm"><i class="fa fa-lock"></i>Signup for Newsletter</a>
+                        <a href="#signup" class="btn btn-default btn-sm"><i class="fa fa-lock"></i>Signup for Newsletter</a>
                     </div>
                 </div>
                 <!-- /.nav -->
@@ -68,8 +68,8 @@
                 <div class="info-wrp">
                     <h2 class="main-text">Quick & Easy Way to Compose Resumes</h2>
                     <p class="sub-text">ResumeWorks allows you to pick relevant experiences and projects to generate a unique resume for each company without all the trouble of copying and pasting.</p>
-                    <a href="#" class="btn btn-default btn1">Pre-launch Signup</a>
-                    <a href="#" class="btn btn-default btn2">Learn more</a>
+                    <a href="#signup" class="btn btn-default btn1">Pre-launch Signup</a>
+                    <a href="#feature" class="btn btn-default btn2">Learn more</a>
                     <img src="images/resume-preview.png" alt="App image" class="img-responsive">
                 </div>
             </div>
@@ -84,8 +84,8 @@
                     <div class="owl-carousel">
                         <div class="item">
                             <p class="content">
-                                Signup now to access all preminum features when we launch
-                                <a href="#" class="btn  btn-line light">Sign Up</a>
+                                Signup now to access all preminum features when we launch<br/>
+                                <a href="#signup" class="btn  btn-line light">Sign Up</a>
                             </p>
                         </div>
                         <!-- /.item -->
@@ -356,7 +356,7 @@
         </section>
         <!-- /.testimonial-section -->
         <!-- Call to action-section -->
-        <section class="calltoaction-section calltoaction-section-1">
+        <section class="calltoaction-section calltoaction-section-1" id="signup">
             <div class="container">
                 <h2 class="title medium">Signup for mail list now</h2>
                 <p class="title-sub small">Enter your email, and you will get a coupon to use all preminum features when we launch.</p>
