--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                         <div class="img"><i class="fa fa-print cm-item"></i></div>
                                         <div class="info">
                                             <h2 class="hd">Printer Friendly</h2>
-                                            <p class="sub-txt">Tried printing that prefect portfolio you had just to find it cannot fix in one page? Our resumes are printer friendly so you can print them without hazzle.</p>
+                                            <p class="sub-txt">Tried printing that prefect portfolio you had just to find it cannot fit in one page? Our resumes are printer friendly so you can print them without hazzle.</p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
