--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="container">
                 <h2 class="title">A Re-defination of Resumes</h2>
                 <p class="title-sub">
-                    Never worry about too much projects to fit in one page.
+                    Never worry about too many projects to fit in one page.
                 </p>
                 <hr class="mr-tb-40">
                 <div class="row eqh">
