--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="container">
                 <h2 class="title">A Re-defination of Resumes</h2>
                 <p class="title-sub">
-                    Never worry about too many projects to fit in one page.
+                    Never worry about too many projects to fit in one page. <a href="http://resume.andyfang.me/print/printable/" class="btn btn-default btn-sm"></i>See Example</a>
                 </p>
                 <hr class="mr-tb-40">
                 <div class="row eqh">
@@ -152,7 +152,7 @@
                         <div class="content">
                             <h2 class="title">Pick your own content</h2>
                             <p class="title-sub">
-                                The way resumes work is broken. Here's a fix to it.
+                                The way resumes work is broken. Here's a fix to it. <a href="http://resume.andyfang.me/print/printable/" class="btn btn-default btn-sm"></i>See Example</a>
                             </p>
                             <div class="row eqh">
                                 <div class="col-sm-6">
@@ -218,7 +218,7 @@
                         <div class="content">
                             <h2 class="title">Get a portfolio site</h2>
                             <p class="title-sub">
-                                Our desinger portfolio templates make sure your job hunt doesn't stop at resumes.
+                                Our desinger portfolio templates make sure your job hunt doesn't stop at resumes. <a href="http://resume.andyfang.me/" class="btn btn-default btn-xs"></i>See Example</a>
                             </p>
                             <div class="row eqh">
                                 <div class="col-sm-6">
