fix button size

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="container">
                 <h2 class="title">A Re-defination of Resumes</h2>
                 <p class="title-sub">
-                    Never worry about too many projects to fit in one page. <a href="http://resume.andyfang.me/print/printable/" class="btn btn-default btn-sm"></i>See Example</a>
+                    Never worry about too many projects to fit in one page. <a href="http://resume.andyfang.me/print/printable/" class="btn btn-default btn-xs"></i>See Example</a>
                 </p>
                 <hr class="mr-tb-40">
                 <div class="row eqh">
