--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                                 <p class="feedback">ResumeWorks changed my entire job-hunting process...</p>
                                 <div class="person">
                                     <img src="images/person1.jpg" alt="Person">
-                                    <strong>Oupsum dolor</strong>
-                                    <em>Creative Director</em>
+                                    <strong>Natasha Burgess</strong>
+                                    <em>Store Manager</em>
                                 </div>
                             </div>
                             <!-- /.feedback-box -->
@@ -298,8 +298,8 @@
                                 <p class="feedback">I applied to NCR with my resume work from ResumeWorks and the HR said she had never seen such a beautiful resume before...</p>
                                 <div class="person">
                                     <img src="images/person2.jpg" alt="Person">
-                                    <strong>Oupsum dolor</strong>
-                                    <em>Creative Director</em>
+                                    <strong>Ryan Britt</strong>
+                                    <em>Graphics Designer</em>
                                 </div>
                             </div>
                             <!-- /.feedback-box -->
@@ -310,8 +310,8 @@
                                 <p class="feedback">It's about time we stop using the plain-old resume template...</p>
                                 <div class="person">
                                     <img src="images/person3.jpg" alt="Person">
-                                    <strong>Oupsum dolor</strong>
-                                    <em>Creative Director</em>
+                                    <strong>Kathy Hayes</strong>
+                                    <em>Instructional Assistant</em>
                                 </div>
                             </div>
                             <!-- /.feedback-box -->
@@ -322,8 +322,8 @@
                                 <p class="feedback">ResumeWorks really helped me match up my skills with companies...</p>
                                 <div class="person">
                                     <img src="images/person4.jpg" alt="Person">
-                                    <strong>Oupsum dolor</strong>
-                                    <em>Creative Director</em>
+                                    <strong>Eddie Morris</strong>
+                                    <em>Social Worker</em>
                                 </div>
                             </div>
                             <!-- /.feedback-box -->
