--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="info-wrp">
                     <h2 class="main-text">Quick & Easy Way to Compose Resumes</h2>
-                    <p class="sub-text">ResumeWorks allows you to pick relevant experiences and projects to generate a unique resume for each company without copying and pasting.<br/><br/>Signup now to access all preminum features when we launch.</p>
+                    <p class="sub-text">ResumeWorks allows you to generate a unique resume for each company. <br/> Without copying and pasting.<br/><br/>Signup now to access all preminum features when we launch.</p>
                     <a href="#signup" class="btn btn-default btn1">Pre-launch Signup</a>
                     <a href="#feature" class="btn btn-default btn2">Learn more</a>
                     <img src="images/resume-preview.png" alt="App image" class="img-responsive">
