--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <div class="content">
                             <h2 class="title">Pick your own content</h2>
                             <p class="title-sub">
-                                The way resumes work is broken. Here's a fix to it. <a href="http://resume.andyfang.me/print/printable/" class="btn btn-default btn-sm"></i>See Example</a>
+                                The way resumes work is broken. Here's a fix to it. <a href="http://resume.andyfang.me/print/printable/" class="btn btn-default btn-xs"></i>See Example</a>
                             </p>
                             <div class="row eqh">
                                 <div class="col-sm-6">
