--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
                 if (target.length) {
                     $('html,body').animate({
-                        scrollTop: target.offset().top - topBarPadding;
+                        scrollTop: target.offset().top
                     }, 1000);
                     return false;
                 }
