--- a/index.html
+++ b/index.html
@@ -444,10 +444,72 @@
     </script>
     <script>
     window.intercomSettings = {
-      app_id: "hlwb1hu8"
+        app_id: "hlwb1hu8"
     };
     </script>
-    <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/hlwb1hu8';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+    <script>
+    (function() {
+        var w = window;
+        var ic = w.Intercom;
+        if (typeof ic === "function") {
+            ic('reattach_activator');
+            ic('update', intercomSettings);
+        } else {
+            var d = document;
+            var i = function() {
+                i.c(arguments)
+            };
+            i.q = [];
+            i.c = function(args) {
+                i.q.push(args)
+            };
+            w.Intercom = i;
+
+            function l() {
+                var s = d.createElement('script');
+                s.type = 'text/javascript';
+                s.async = true;
+                s.src = 'https://widget.intercom.io/widget/hlwb1hu8';
+                var x = d.getElementsByTagName('script')[0];
+                x.parentNode.insertBefore(s, x);
+            }
+            if (w.attachEvent) {
+                w.attachEvent('onload', l);
+            } else {
+                w.addEventListener('load', l, false);
+            }
+        }
+    })()
+    </script>
+    <script type="text/javascript">
+    (function(d, n) {
+        var s, a, p;
+        s = document.createElement("script");
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = (document.location.protocol === "https:" ? "https:" : "http:") + "//cdn.nudgespot.com" + "/nudgespot.js";
+        a = document.getElementsByTagName("script");
+        p = a[a.length - 1];
+        p.parentNode.insertBefore(s, p.nextSibling);
+        window.nudgespot = n;
+        n.init = function(t) {
+            function f(n, m) {
+                var a = m.split('.');
+                2 == a.length && (n = n[a[0]], m = a[1]);
+                n[m] = function() {
+                    n.push([m].concat(Array.prototype.slice.call(arguments, 0)))
+                }
+            }
+            n._version = 0.1;
+            n._globals = [t];
+            n.people = n.people || [];
+            n.params = n.params || [];
+            m = "track register unregister identify set_config people.delete people.create people.update people.create_property people.tag people.remove_Tag".split(" ");
+            for (var i = 0; i < m.length; i++) f(n, m[i])
+        }
+    })(document, window.nudgespot || []);
+    nudgespot.init("b09d6de4cc8ecafe61a79b2d2f7a6354");
+    </script>
 </body>
 
 </html>
