Phrase Changes Thanks to Arshad Hosein

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <i class="fa fa-caret-down"></i><i class="fa fa-caret-up"></i>
                                 <div class="cm-item">
                                     <h2 class="hd">Printer Friendly</h2>
-                                    <p class="sub-txt">ResumeWorks generate resumes that not only look great online but are also presentable on a piece of paper.</p>
+                                    <p class="sub-txt">ResumeWorks generate resumes that not only look great online but are also stand out from the rest when printed, ensuring the right people see yours.</p>
                                 </div>
                             </div>
                         </div>
@@ -122,8 +122,8 @@
                             <div class="info">
                                 <i class="fa fa-caret-up"></i>
                                 <div class="cm-item">
-                                    <h2 class="hd">Forking Resumes</h2>
-                                    <p class="sub-txt">Want to make a new version of resume based on the current selection of projects and experiences? Just fork it.</p>
+                                    <h2 class="hd">Test New Designs</h2>
+                                    <p class="sub-txt">Want to make a new version of resume based on the current selection of projects and experiences? Just fork it and you’ll be able to edit without worrying about your original version.</p>
                                 </div>
                             </div>
                         </div>
@@ -135,8 +135,8 @@
                             <div class="info">
                                 <i class="fa fa-caret-down"></i><i class="fa fa-caret-up"></i>
                                 <div class="cm-item">
-                                    <h2 class="hd">Great support</h2>
-                                    <p class="sub-txt">Everyone on our team uses ResumeWorks ourselves. In case you discovered a bug before we do, shoot us an email and we'll fix it.</p>
+                                    <h2 class="hd">A Product That Works</h2>
+                                    <p class="sub-txt">Here at ResumeWorks, we stand behind the tool we’ve created. All of our team members even use it themselves to great success. We believe that you’ll love it just as much as we do.</p>
                                 </div>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                                         <div class="img"><i class="fa fa-television cm-item"></i></div>
                                         <div class="info">
                                             <h2 class="hd">Beautiful Templates</h2>
-                                            <p class="sub-txt">Remember how promotional emails used to look like ten years ago? MailChimp fixed that, and we're here to fix resumes.</p>
+                                            <p class="sub-txt">Other industries have had their design standards brought into the modern day, so why not resumes? We aim to provide eye catching designs that don’t compromise on getting the information you need to the people who need to see it.</p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
@@ -175,7 +175,7 @@
                                         <div class="img"><i class="fa fa-object-group cm-item"></i></div>
                                         <div class="info">
                                             <h2 class="hd">Pick Relevant Experiences</h2>
-                                            <p class="sub-txt">List your machine learning skills when applying to Google. Or list your designer skills when applying to Adobe. You name it.</p>
+                                            <p class="sub-txt">Just because that coffee shop doesn’t care about your experience with Machine Learning doesn’t mean that Google won’t. Pick and choose the relevant information for each individual application, all at the click of a button.</p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
@@ -184,8 +184,8 @@
                                     <div class="info-box info-box5">
                                         <div class="img"><i class="fa fa-random cm-item"></i></div>
                                         <div class="info">
-                                            <h2 class="hd">Change Your Template with One Click</h2>
-                                            <p class="sub-txt">Had that perfect resume template but just don't want waste all the effort just to convert your current resume? We help you do that with one click.</p>
+                                            <h2 class="hd">Clear, Concise Information</h2>
+                                            <p class="sub-txt">Here at ResumeWorks, we understand the need to present key information as clearly as possible in order to ensure your Resume finds its way to the right stack. So, we place an emphasis on readability and optimization for at-a-glance evaluation of your information. </p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
@@ -194,8 +194,8 @@
                                     <div class="info-box info-box5">
                                         <div class="img"><i class="fa fa-print cm-item"></i></div>
                                         <div class="info">
-                                            <h2 class="hd">Printer Friendly</h2>
-                                            <p class="sub-txt">Tried printing that prefect portfolio you had just to find it cannot fit in one page? Our resumes are printer friendly so you can print them without hazzle.</p>
+                                            <h2 class="hd">Share With Ease</h2>
+                                            <p class="sub-txt">Printing resumes isn’t for everyone. Sometimes, you want to keep your paper use to a minimum, other times, you’re just trying to get your foot in the door. But whatever the situation, ResumeWorks makes sharing your Resume electronically a breeze.</p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
@@ -241,8 +241,8 @@
                                     <div class="info-box info-box5">
                                         <div class="img"><i class="fa fa-object-group cm-item"></i></div>
                                         <div class="info">
-                                            <h2 class="hd">Same Data</h2>
-                                            <p class="sub-txt">The data used in your resume are the same as the data used to render your resumes, so no more copying and pasting, again.</p>
+                                            <h2 class="hd">Enter Once, Design Many</h2>
+                                            <p class="sub-txt">It’s no secret that crafting your resume with the right style can make a big difference. Gone are the days of copying and pasting the same info again and again. With ResumeWorks, we dynamically render your information depending on your chosen theme, so you only need to enter your data once. After that, the possibilities are endless.</p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
@@ -253,8 +253,8 @@
                                     <div class="info-box info-box5">
                                         <div class="img"><i class="fa fa-map-o cm-item"></i></div>
                                         <div class="info">
-                                            <h2 class="hd">Search Engine Optimization</h2>
-                                            <p class="sub-txt">Increase your publicity with SEO optimization, so you'll come up higher than your fellow job-searchers in a search run by recruiter.</p>
+                                            <h2 class="hd">We’ve Got ‘Google’ Covered.</h2>
+                                            <p class="sub-txt">Ensure that recruiters get the right first impression of you with our top of the line ‘Search Engine Optimization’.</p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
@@ -264,7 +264,7 @@
                                         <div class="img"><i class="fa fa-diamond cm-item"></i></div>
                                         <div class="info">
                                             <h2 class="hd">Free Hosting</h2>
-                                            <p class="sub-txt">Never worry about spinning up a server yourself. You'll get a unique url to your portfolio in one click.</p>
+                                            <p class="sub-txt">Leave the VPS at the door and servers can go right back on the rack. At ResumeWorks, you'll get a unique link to your portfolio in one click. Share freely without ever giving hosting a thought.</p>
                                         </div>
                                     </div>
                                     <!-- /.info-box -->
